--- a/StockControl/StockControl.csproj
+++ b/StockControl/StockControl.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
     <Folder Include="Models\Enum\" />
+    <Folder Include="Services\" />
+    <Folder Include="Models\ViewModel\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
