--- a/StockControl/StockControl.csproj
+++ b/StockControl/StockControl.csproj
@@ -8,6 +8,7 @@
     <Folder Include="Models\Enum\" />
     <Folder Include="Services\" />
     <Folder Include="Models\ViewModel\" />
+    <Folder Include="Services\Exceptions\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
